--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -12,9 +12,14 @@ collections: # A list of collections the CMS should be able to edit
     fields: # The fields each document in this collection have
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
-      - {label: "Intro Blurb", name: "description", widget: "text"}
-      - {label: "Image", name: "image", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Menu", name: "menu", widget: object, fields: [
+      - {label: "main", name: "", widget: object, fields: [
+          {label: "Identifier", name: "identifier", widget: number},
+          {label: "name", name: "name", widget: string},
+          {label: "weight", name: "weight", widget: string}
+        ]}
+      ]}
   - name: "pages"
     label: "Pages"
     files:
