--- a/site/config.toml
+++ b/site/config.toml
@@ -1,3 +1,10 @@
 baseurl = "/"
 languageCode = "en-us"
 title = "Homepage"
+
+[menu]
+    [[menu.mainmenu]]
+    identifier = ""
+    name = "About"
+    url = "/coffee"
+    weight = 1
